fixed ios app issues and big whitespace after titles

--- a/src/app/components/verse/verse.component.css
+++ b/src/app/components/verse/verse.component.css
@@ -23,6 +23,8 @@
 h3 {
   font-size: 125%;
   text-align: center;
+  margin-top: 1.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .references-block {
